--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'org.jsoup:jsoup:1.10.3'
     implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha13"
     implementation 'com.google.android.material:material:1.3.0-rc01'
     testImplementation 'junit:junit:4.12'
