Finish all views for settings pages (#10)
* Finish views for settings pages

* Respond to PR comments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -65,5 +67,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.github.luizgrp:SectionedRecyclerViewAdapter:v3.2.0'
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
 }
